# samples

./: .gitignore
JNITest/: HelloWorldJNI.cpp  HelloWorldJNI.java  build.sh
cfuncs/: util.c
cuda-arch/: t2.cu
cuda-shared-mem-test/: Makefile  shared_mem.cu  shared_mem_0_3  shared_mem_22_11  shared_mem_22_11_mod
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/example/: CMakeLists.txt  Makefile  block_fft_performance.cu  block_io.hpp  common.hpp  convolution.cu  convolution_r2c_c2r.cu  nvrtc_fft_thread.cu  simple_fft_block.cu  simple_fft_block_c2r.cu  simple_fft_block_c2r_fp16.cu  simple_fft_block_fp16.cu  simple_fft_block_half2.cu  simple_fft_block_r2c.cu  simple_fft_block_r2c_fp16.cu
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/: LICENSE  cufftdx_version.hpp  operators.hpp  types.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/database/: database.hpp  database_fp16_fwd.hpp.inc  database_fp16_inv.hpp.inc  database_fp32_fwd.hpp.inc  database_fp32_inv.hpp.inc  database_fp64_fwd.hpp.inc  database_fp64_inv.hpp.inc  definitions_fp16_fwd.hpp.inc  definitions_fp16_inv.hpp.inc  definitions_fp32_fwd.hpp.inc  definitions_fp32_inv.hpp.inc  definitions_fp64_fwd.hpp.inc  definitions_fp64_inv.hpp.inc  fft_10000_fp16_fwd.hpp.inc  fft_10000_fp16_inv.hpp.inc  fft_10000_fp32_fwd.hpp.inc  fft_10000_fp32_inv.hpp.inc  fft_10000_fp64_fwd.hpp.inc  fft_10000_fp64_inv.hpp.inc  fft_1000_fp16_fwd.hpp.inc  fft_1000_fp16_inv.hpp.inc  fft_1000_fp32_fwd.hpp.inc  fft_1000_fp32_inv.hpp.inc  fft_1000_fp64_fwd.hpp.inc  fft_1000_fp64_inv.hpp.inc  fft_100_fp16_fwd.hpp.inc  fft_100_fp16_inv.hpp.inc  fft_100_fp32_fwd.hpp.inc  fft_100_fp32_inv.hpp.inc  fft_100_fp64_fwd.hpp.inc  fft_100_fp64_inv.hpp.inc  fft_1024_fp16_fwd.hpp.inc  fft_1024_fp16_inv.hpp.inc  fft_1024_fp32_fwd.hpp.inc  fft_1024_fp32_inv.hpp.inc  fft_1024_fp64_fwd.hpp.inc  fft_1024_fp64_inv.hpp.inc  fft_10_fp16_fwd.hpp.inc  fft_10_fp16_inv.hpp.inc  fft_10_fp32_fwd.hpp.inc  (+356 more)
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/database/detail/: block_fft.hpp  thread_fft.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/detail/: fft_checks.hpp  fft_description.hpp  fft_execution.hpp  system_checks.hpp  workspace.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/operators/: sm.hpp  stride.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/traits/: fft_traits.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/include/traits/detail/: bluestein_helpers.hpp  check_and_get_trait.hpp  description_traits.hpp
cuda-shared-mem-test/nvidia-cufftdx-0.3.0-Linux/cufftdx/lib/cmake/cufftdx/: cufftdx-config.cmake  cufftdx-targets.cmake
cuda-shared-mem-test/nvidia-mathdx-22.11.0-Linux-modified/nvidia/mathdx/22.11/include/cufftdx/include/database/records/700/: database_fp32_fwd.hpp.inc
dlopen-test/: Makefile  dlopen  dlopenTest.c  dlopentest.c  dupci_monitor.cu  dupci_monitor.h  encapsulated.c  symbolsTest.c
fmt/: Makefile  formatPrefix  formatPrefix.c  myprintf  myprintf.c
node-replace/: replace.sh  tomo2.job
opaque-pointer/: Makefile  main.c  thing.c  thing.h
pcie-throughput/: Makefile  pcie_throughput  pcie_throughput.cu
shared-mem-lim/: Makefile  shared_mem.cu
special-char-par/: test.par  test.sh
unescape-string/: test.c  unescape.c
